@@ -11,6 +11,9 @@ Revision history for Perl extension FSA::Rules.
         now works properly.
       - A successful attempt to switch states with the "strict" attribute
         enabled now succeeds if no other rules evaluate to true.
+      - Each rule may now take an optional has reference instead of a sub
+        reference.  This makes message tracking for rules easier.  It's
+        also used by graphs to generate edge labels.
 
 0.10  2004-12-17T23:29:54
       - Moved state-specific methods to new FSA::State class. This is a
